[workspace]
members = ["async-gen-macros"]

[package]
name = "async-gen"
version = "0.2.0"
edition = "2021"

license = "MIT"
keywords = ["async", "generator"]
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/async-gen"
description = "Async generator in stable rust using async/await"

exclude = ["/async-gen-macros", "/tests",  ".*"]

[dependencies]
futures-core = "0.3"
async-gen-macros = { version = "0.2", path = "./async-gen-macros" }
pin-project-lite = "0.2"

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
