[package]
name = "async-gen-macros"
version = "0.2.1"
edition = "2021"

license = "MIT"
keywords = ["async", "generator"]
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/async-gen"
description = "Async generator in stable rust using async/await"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "visit-mut"] }
quote = "1"
proc-macro2 = "1"
